[tool.poetry]
name = "markdown-to-zhihu-article"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
readme = "README.md"
packages = [{include = "markdown_to_zhihu_article"}]

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.8.1"
pymdown-extensions = "^10.16"
beautifulsoup4 = "^4.12.2"
click = "^8.1.6"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
